--- a/Day9/package.json
+++ b/Day9/package.json
@@ -8,14 +8,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Nikita12112002/Devsnest_Backend.git"
+    "url": "git+https://github.com/gaurigarg33/Devsnest_Backend.git"
   },
-  "author": "Nikita",
+  "author": "Gauri Garg",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Nikita12112002/Devsnest_Backend/issues"
+    "url": "https://github.com/gaurigarg33/Devsnest_Backend/issues"
   },
-  "homepage": "https://github.com/Nikita12112002/Devsnest_Backend#readme",
+  "homepage": "https://github.com/gaurigarg33/Devsnest_Backend#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
